# LLM_ws

./: README.md  gemini.md
src/realsense-ros/realsense2_camera/: .CMakeLists.txt.swp  CMakeLists.txt
src/vision_llm_control/: CMakeLists.txt  package.xml  setup.py
src/vision_llm_control/launch/: llm_drive.launch.py
src/vision_llm_control/resource/: vision_llm_control
src/vision_llm_control/vision_llm_control/: llm_driver.py
