<package format="3">
  <name>vision_llm_control</name>
  <version>0.1.0</version>
  <description>Gemma 3‑driven vision‑to‑drive control for F1TENTH (ROS2)</description>
  <maintainer email="ugrpf1@gmain.com">DGIST UGRP 2025 F1tenth</maintainer>
  <license>Apache-2.0</license>

  <build_type>ament_python</build_type>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport_py</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>ollama</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
</package>

